--- a/Source Code/Rummage Rush/export_presets.cfg
+++ b/Source Code/Rummage Rush/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="D:/Rummage Rush.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -20,13 +20,23 @@ texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
+binary_format/embed_pck=false
 custom_template/release=""
 custom_template/debug=""
-application/icon=""
-application/file_version=""
-application/product_version=""
+codesign/enable=false
+codesign/identity_type=0
+codesign/identity=""
+codesign/password=""
+codesign/timestamp=true
+codesign/timestamp_server_url=""
+codesign/digest_algorithm=1
+codesign/description=""
+codesign/custom_options=PoolStringArray(  )
+application/icon="res://finallogo.ico"
+application/file_version="1.0.0"
+application/product_version="1.0.0"
 application/company_name=""
-application/product_name=""
+application/product_name="Rummage Rush"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
